recalculate audiences log fixed word wrap modes in audiences lists audiences log: skip jobs loading mode fixed calculating totals in an audience log entry

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -8,3 +8,10 @@
     top: 0;
   }
 }
+
+.limited-width {
+  max-width: 250px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
